--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -21,7 +22,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="animated flipInX">
+    <div>
       <div class="navbar navbar-default MenuStyle staticMenu"role="navigation">
         <div>
           <div class="navbar-header">
@@ -118,7 +119,7 @@
 
     <div class="footer footerUes">
       <div class="container">
-        <p class="footerText">Universidad Estatal de Sonora</p>
+        <p class="footerText"><span class="glyphicon glyphicon-education pull-left"></span>Universidad Estatal de Sonora<span class="glyphicon glyphicon-education pull-right"></span></p>
       </div>
     </div>
 
