--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+     
     <div>
       <div class="navbar navbar-default MenuStyle staticMenu"role="navigation">
         <div>
@@ -134,7 +135,6 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -154,6 +154,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/organigrama.js"></script>
+        <script src="scripts/controllers/sgc.js"></script>
         <!-- endbuild -->
 </body>
 </html>
