modulo normatividad añadido,  sticky footer add

--- a/app/index.html
+++ b/app/index.html
@@ -155,6 +155,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/organigrama.js"></script>
         <script src="scripts/controllers/sgc.js"></script>
+        <script src="scripts/controllers/normatividad.js"></script>
         <!-- endbuild -->
 </body>
 </html>
