--- a/app/index.html
+++ b/app/index.html
@@ -51,34 +51,40 @@
               <!--PLANEACION-->
               <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Planeación</a>
                 <ul class="dropdown-menu">
-                  <li><a ng-href="#/">Presupuesto de Ingresos Propios</a></li>
-                  <li><a ng-href="#/">Presupuesto de Egresos</a></li>
-                  <li><a ng-href="#/">Manual para la Programación y Presupuestación</a></li>
-                  <li>
-                    <a ng-href="#/">Programa Operativo Anual</a>
-                    <ul class="dropdown-menu sub-menu">
-                      <li><a ng-href="#/">Manual de Programación</a></li>
-                      <li><a ng-href="#/">Manual de Presupuestación</a></li>
+                  <li><a ng-href="#/">Programa De Desarrollo Institucional</a></li>
+                  <li><a ng-href="#/">Programa Mediano Plazo</a></li>
+                  <li class="dropdown"><a ng-href="#/">Presupuesto Anual</a>
+                    <ul class="dropdown-menu sub-menu acreditacion">
+                      <li><a ng-href="#/">Ingresos</a>
+                          <ul class="dropdown-menu sub-menu3 acreditacion">
+                            <li><a ng-href="#/">2013</a></li>
+                            <li><a ng-href="#/">2014</a></li>
+                            <li><a ng-href="#/">2015</a></li>
+                            <li><a ng-href="#/">2016</a></li>
+                          </ul>
+                      </li>
+                      <li><a ng-href="#/">Egresos</a>
+                          <ul class="dropdown-menu sub-menu3 egresos">
+                              <li><a ng-href="#/">2013</a></li>
+                              <li><a ng-href="#/">2014</a></li>
+                              <li><a ng-href="#/">2015</a></li>
+                              <li><a ng-href="#/">2016</a></li>
+                          </ul>
+                      </li>
                     </ul>
                   </li>
-                    
-                  <li><a ng-href="#/">PDI</a></li>
-                  <li><a ng-href="#/">PMP</a></li>
-                  <li>
-                    <a ng-href="#/">Presupuesto</a>
-                    <ul class="dropdown-menu sub-menu presupuesto">
-                      <li><a ng-href="#/">2013</a></li>
-                      <li><a ng-href="#/">2014</a></li>
-                      <li><a ng-href="#/">2015</a></li>
-                      <li><a ng-href="#/">2016</a></li>
+                  <li><a ng-href="#/">Evaluación De Metas POA</a></li>
+                  <li><a ng-href="#/">Evaluación De Indicadores ETCA</a></li>
+                  <li><a ng-href="#/">Sistema De Indicadores De Procedimientos</a></li>
+                  <li class="dropdown"><a ng-href="#/">Estudios Institucionales</a>
+                    <ul class="dropdown-menu sub-menu acreditacion">
+                      <li><a ng-href="#/">Hermosillo</a></li>
+                      <li><a ng-href="#/">San Luis</a></li>
+                      <li><a ng-href="#/">Magdalena</a></li>
+                      <li><a ng-href="#/">Navojoa</a></li>
+                      <li><a ng-href="#/">Benito Juárez</a></li>
                     </ul>
                   </li>
-                  <li><a ng-href="#/">Evaluación de las Metas del POA</a></li>
-                  <li><a ng-href="#/">Evaluación de los Indicadores ETCA</a></li>
-                  <li><a ng-href="#/">Matriz de Desempeño</a></li>
-                  <li><a ng-href="#/">SIP</a></li>
-                  <li><a ng-href="#/">Agenda Estratégica</a></li>
-                  <li><a ng-href="#/estudiosInstitucionales">Estudios  Institucionales</a></li>
                 </ul>
               </li>
               <!--NORMATIVIDAD-->
@@ -87,10 +93,14 @@
               <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Acreditación</a>
               <ul class="dropdown-menu">
                   <li><a ng-href="#/acreditacion">Organismos Acreditadores</a></li>
-                  <li><a ng-href="#/">Acreditaciones 2015</a></li>
-                  <li><a ng-href="#/">Acreditaciones 2016</a></li>
-                  <li><a ng-href="#/">Acreditaciones 2017</a></li>
-                  <li><a ng-href="#/">Sistema</a></li>
+                  <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown">Acreditaciones Institucionales</a>
+                    <ul class="dropdown-menu sub-menu acreditacion">
+                        <li><a ng-href="#/">2017</a></li>
+                        <li><a ng-href="#/">2016</a></li>
+                        <li><a ng-href="#/">2015</a></li>                                                
+                    </ul>
+                  </li>
+                  <li><a ng-href="#/">Plataforma De Acreditación</a></li>
                 </ul>
               </li>
               <!--SGC-->
@@ -107,7 +117,9 @@
                 </ul>
               </li>
               <!--PORTAFOLIO-->
-             <li class="alignLiMenu"><a ng-href="#/">Portafolio</a></li>
+             <li class="alignLiMenu"><a ng-href="#/">Transparencia</a></li>
+              <!--PORTAFOLIO-->
+             <li class="alignLiMenu"><a ng-href="#/">Blog</a></li>
             </ul>
           </div>
         </div>
