propuesta diseño blog

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -137,7 +138,7 @@
               <!--PORTAFOLIO-->
              <li class="alignLiMenu"><a ng-href="#/">Transparencia</a></li>
               <!--PORTAFOLIO-->
-             <li class="alignLiMenu"><a ng-href="#/">Blog</a></li>
+             <li class="alignLiMenu"><a ng-href="#/blog">Blog</a></li>
             </ul>
           </div>
         </div>
@@ -184,6 +185,7 @@
         <script src="scripts/controllers/organigrama.js"></script>
         <script src="scripts/controllers/sgc.js"></script>
         <script src="scripts/controllers/normatividad.js"></script>
+        <script src="scripts/controllers/blog.js"></script>
         <!-- endbuild -->
 </body>
 </html>
