--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,11 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
-
+    <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -209,6 +209,21 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+    
+    <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js"></script>
+    <script src="node_modules/angularfire/dist/angularfire.min.js"></script>
+    <script>
+      // Initialize Firebase
+      var config = {
+        apiKey: "AIzaSyAxcSQlK0xbrzyenmaCeJ6_PUaKLqum3G8",
+        authDomain: "blogues-5b4c4.firebaseapp.com",
+        databaseURL: "https://blogues-5b4c4.firebaseio.com",
+        projectId: "blogues-5b4c4",
+        storageBucket: "blogues-5b4c4.appspot.com",
+        messagingSenderId: "741230668306"
+      };
+      firebase.initializeApp(config);
+    </script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -220,6 +235,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -230,6 +246,8 @@
         <script src="scripts/controllers/sgc.js"></script>
         <script src="scripts/controllers/normatividad.js"></script>
         <script src="scripts/controllers/blog.js"></script>
+        <script src="scripts/controllers/blogAdministrator.js"></script>
+        <!--<script src="scripts/services/blogFirebase.js"></script>-->
         <!-- endbuild -->
 </body>
 </html>
