--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 
             <ul class="nav navbar-nav canvasMenuUes navText">
                <li class="alignLiMenu"><a ng-href="#/">Inicio</a></li>
-              <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Quienes Somos</a>
+              <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Quiénes Somos</a>
                 <ul class="dropdown-menu">
                   <li><a ng-href="#/organigrama">Organigrama</a></li>
                   <li><a ng-href="#/directorio">Directorio</a></li>
@@ -51,51 +51,46 @@
               <!--PLANEACION-->
               <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Planeación</a>
                 <ul class="dropdown-menu">
-                  <li><a ng-href="/pdf/planeacion/Plan de desarrollo institucional 2014-2019.pdf" target="_blank">Programa de Desarrollo Institucional</a></li>
+                  <li><a ng-href="/pdf/planeacion/Programa de Desarrollo Institucional 2015-2019 (2).pdf" target="_blank">Programa de Desarrollo Institucional</a></a></li>
                   <li><a ng-href="/pdf/planeacion/Programa Institucional de Medio Plazo 2016-2022.pdf" target="_blank">Programa Mediano Plazo</a></li>
                   <li class="dropdown"><a ng-href="#/">Presupuesto Anual</a>
                     <ul class="dropdown-menu sub-menu acreditacion">
                       <li><a ng-href="#/">Ingresos</a>
                           <ul class="dropdown-menu sub-menu3 acreditacion">
-                            <li><a ng-href="/pdf/planeacion/ingresos/Formato de ingresos propios 2015.xlsx" target="_blank">2015</a></li>
-                            <li><a ng-href="/pdf/planeacion/ingresos/PRESUPUESTO DE INGRESOS PROPIOS 2016.xlsx" target="_blank">2016</a></li>
-                            <li><a ng-href="/pdf/planeacion/ingresos/FORMATOS PARA PROPORCIONAR INGRESOS PROPIOS DE ORGANISMOS DESCENTRALIZADOS 2017.xlsx" target="_blank">2017</a></li>
+                            <li><a ng-href="/pdf/planeacion/ingresos/ingresos2015.xlsx" download="ingresos2015" target="_blank">2015</a></a></li>
+                            <li><a ng-href="/pdf/planeacion/ingresos/ingresos2016.xlsx" download="ingresos2016" target="_blank">2016</a></li>
+                            <li><a ng-href="/pdf/planeacion/ingresos/ingresos2017.xlsx" download="ingresos2017" target="_blank">2017</a></li>
                           </ul>
                       </li>
                       <li><a ng-href="#/">Egresos</a>
                           <ul class="dropdown-menu sub-menu3 egresos">
-                              <li><a ng-href="/pdf/planeacion/egresos/Presupuesto 2015.xlsx">2015</a></li>
-                              <li><a ng-href="/pdf/planeacion/egresos/Presupuesto 2016.xlsx">2016</a></li>
-                              <li><a ng-href="/pdf/planeacion/egresos/Presupuesto 2017.xlsx">2017</a></li>
+                              <li><a ng-href="/pdf/planeacion/egresos/egresos2015.xlsx" download="egresos2015" target="_blank">2015</a></li>
+                              <li><a ng-href="/pdf/planeacion/egresos/egresos2016.xlsx" download="egresos2016" target="_blank">2016</a></li>
+                              <li><a ng-href="/pdf/planeacion/egresos/egresos2017.xlsx" download="egresos2017" target="_blank">2017</a></li>
                           </ul>
                       </li>
                     </ul>
                   </li>
                   <li><a ng-href="http://poa.ues.mx/login.aspx" target="_blank">Sistema de Captura POA</a></li>
-                  <li><a ng-href="#/">Evaluación de Metas POA</a></li>
+                  <li><a ng-href="/pdf/planeacion/POA2017.pdf" target="_blank">Evaluación de Metas POA</a></li>
                   <li class=" dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown">Evaluación de Indicadores ETCA</a>
                     <ul class="dropdown-menu sub-menu acreditacion">
-                        <li><a ng-href="/pdf/planeacion/etca/ETCA 2015.xlsx" target="_blank">2015</a></li>
-                        <li><a ng-href="/pdf/planeacion/etca/ETCA 2016.xlsx" target="_blank">2016</a></li>
-                        <li><a ng-href="/pdf/planeacion/etca/ETCA 2017.xlsx" target="_blank">2017</a></li>                                                
+                        <li><a ng-href="/pdf/planeacion/etca/ETCA2015.xlsx" download="ETCA2015" target="_blank">2015</a></li>
+                        <li><a ng-href="/pdf/planeacion/etca/ETCA2016.xlsx" download="ETCA2016" target="_blank">2016</a></li>
+                        <li><a ng-href="/pdf/planeacion/etca/ETCA2017.xlsx" download="ETCA2017" target="_blank">2017</a></li>                                                
                     </ul>
                   </li>
-                  <li><a ng-href="#/">Sistema de Indicadores de Procedimientos</a></li>
-                  <li class="dropdown"><a ng-href="#/">Estudios Institucionales</a>
-                      <ul class="dropdown-menu sub-menu acreditacion">
-                        <li><a ng-href="#/">2015</a></li>
-                        <li><a ng-href="#/">2016</a></li>
-                        <li><a ng-href="#/">2017</a></li>
-                      </ul>
-                  </li>
+                  <li><a ng-href="#/sistemaIndicadoresProcedimientos">Sistema de Indicadores de Procedimientos</a></li>
+                  <li><a ng-href="/pdf/planeacion/estudiosInstitucionales.pdf" target="_blank">Estudios Institucionales</a></li>
                   <li class="dropdown"><a ng-href="#/">Agenda Estratégica</a>
-                    <ul class="dropdown-menu sub-menu acreditacion">
-                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/Agenda Estrategica Rectoria 2017.xlsx" target="_blank">Rectoría</a></li>
-                      <li><a ng-href="#/">San Luis Río Colorado</a></li>
-                      <li><a ng-href="#/">Magdalena</a></li>
-                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/Agenda Estrategica ua 2017-1.xlsx">Hermosillo</a></li>
-                      <li><a ng-href="#/">Benito Juárez</a></li>
-                      <li><a ng-href="#/">Navojoa</a></li>
+                    <ul class="dropdown-menu sub-menu acreditacion" style="margin-top:-60px;">
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/rectoria2017.xlsx" download="Rectoria2017" target="_blank">Captura de Evidencias</a></li>
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/rectoria2017.xlsx" download="Rectoria2017" target="_blank">Rectoría</a></li>
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/ua2017.xlsx" download="ua2017" target="_blank">San Luis Río Colorado</a></li>
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/ua2017.xlsx" download="ua2017" target="_blank">Magdalena</a></li>
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/ua2017.xlsx" download="ua2017" target="_blank">Hermosillo</a></li>
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/ua2017.xlsx" download="ua2017" target="_blank">Benito Juárez</a></li>
+                      <li><a ng-href="/pdf/planeacion/agendaEstrategica/ua2017.xlsx" download="ua2017" target="_blank">Navojoa</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -106,10 +101,10 @@
               <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Acreditación</a>
               <ul class="dropdown-menu">
                   <li><a ng-href="#/organismosAcreditadores">Organismos Acreditadores</a></li>
-                  <li class=" dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown">Acreditaciones Institucionales</a>
+                  <li class=" dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown">Acreditaciones</a>
                     <ul class="dropdown-menu sub-menu acreditacion">
-                        <li><a ng-href="#/">2016</a></li>
-                        <li><a ng-href="#/">2017</a></li>                                                
+                        <li><a ng-href="/pdf/acreditaciones/acreditaciones2015.zip" download="acreditaciones2015" target="_blank">2015</a></li>
+                        <li><a ng-href="/pdf/acreditaciones/acreditaciones2016.zip" download="acreditaciones2016" target="_blank">2016</a></li>                                                
                     </ul>
                   </li>
                   <li><a ng-href="http://35.184.92.106:8000/accounts/login/?next=/" target="_blank">Plataforma de Acreditación</a></li>
@@ -118,7 +113,7 @@
               <!--SGC-->
               <li class="alignLiMenu"><a ng-href="#/sgc">SGC</a></li>
               <!--ESTADISTICA-->
-              <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Estadistíca</a>
+              <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Estadística</a>
                   <ul class="dropdown-menu">
                       <li><a ng-href="#/numeralia">Numeralia</a></li>
                       <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Documentos Estadísticos</a>
@@ -168,6 +163,13 @@
                         </ul>
                         </li>
                       <li><a ng-href="#/sieues">SIEUES</a></li>
+                      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Prontuarios Estadísticos</a>
+                      <ul class="dropdown-menu sub-menu acreditacion">
+                      <li><a ng-href="/pdf/planeacion/estadistica/prontuarios/prontuario2016-1.pptx" download="prontuario2016-1" target="_blank">2016-1</a></li>
+                      <li><a ng-href="/pdf/planeacion/estadistica/prontuarios/prontuario2016-2.pptx" download="prontuario2016-2" target="_blank">2016-2</a></li>
+                      <li><a ng-href="/pdf/planeacion/estadistica/prontuarios/prontuario2017-1.pptx" download="prontuario2017-1" target="_blank">2017-1</a></li>                                                
+                      </ul>
+                    </li>
                   </ul>
               </li>
               <!--FONDOS-->
@@ -180,7 +182,13 @@
                 </ul>-->
               </li>
               <!--PORTAFOLIO-->
-             <li class="alignLiMenu"><a ng-href="#/">Transparencia</a></li>
+             <li class="alignLiMenu dropdown"><a ng-href="#/" class="dropdown-toggle" data-toggle="dropdown" style="height: 61px">Transparencia</a>
+               <ul class="dropdown-menu">
+                  <li><a ng-href="/pdf/planeacion/etca/ETCA2015.xlsx" download="ETCA2015" target="_blank">Plataforma Nacional de Transpatencia</a></li>
+                  <li><a ng-href="/pdf/planeacion/etca/ETCA2016.xlsx" download="ETCA2016" target="_blank">Plataforma de Transparencia Sonora</a></li>
+                  <li><a ng-href="/pdf/planeacion/etca/ETCA2017.xlsx" download="ETCA2017" target="_blank">INFOMEX</a></li>                                                
+              </ul>
+             </li>
               <!--PORTAFOLIO-->
              <li class="alignLiMenu"><a ng-href="#/blog">Blog</a></li>
             </ul>
